# CorpusExplorer.Terminal.Console

./: .gitignore  App.config  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ConsoleConfiguration.cs  CorpusExplorer.Port.RProgramming.Api.csproj  CorpusExplorer.Terminal.Console.csproj  CorpusExplorer.Terminal.Universal - Verknüpfung.lnk  LICENSE  Program.cs  README.md  packages.config
Action/: BasicInformationAction.cs  ClusterAction.cs  CollocateAction.cs  ConvertAction.cs  CooccurrenceAction.cs  CooccurrenceSelectedAction.cs  CrossFrequencyAction.cs  DocumentCountAction.cs  FilterAction.cs  Frequency1Action.cs  Frequency1SelectAction.cs  Frequency2Action.cs  Frequency3Action.cs  GetDocumentAllLayersAction.cs  GetDocumentDisplaynamesAction.cs  GetDocumentMetadataAction.cs  GroupSelectionAction.cs  KwicAllInDocumentFilterAction.cs  KwicAllInSentenceFilterAction.cs  KwicAnyFilterAction.cs  KwicExactPhraseFilterAction.cs  KwicFirstAnyFilterAction.cs  KwitFilterAction.cs  LayerNamesAction.cs  LayerValuesAction.cs  MetaAction.cs  MetaCategoriesAction.cs  MetaDocumentAction.cs  MtldAction.cs  NGramAction.cs  NgramSelectedAction.cs  OutputAction.cs  ReadingEaseAction.cs  SentenceCountAction.cs  StyleBurrowsDeltaAction.cs  StyleNgramAction.cs  TokenCountAction.cs  TypeCountAction.cs  VocabularyComplexityAction.cs  VocdAction.cs
Exporter/: ExporterCec5.cs  ExporterCec6.cs  ExporterDtaBf.cs  (+1 more)
Python/: .pypirc  pyproject.toml  setup.py
Python/src/CorpusExplorer/: CorpusExplorer.py
Python/src/CorpusExplorer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Xml/: build.bat  (+3 more)
(+257 files in other folders)
