[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CorpusExplorer"
version = "0.0.1"
authors = [
  { name="Dr. Jan Oliver Rüdiger", email="pypi@jan-oliver-ruediger.de" },
]
description = "This package makes it easy to interact with a local CorpusExplorer instance."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"